# conda_build_problems

./: CMakeLists.txt
Code/: CMakeLists.txt
Code/RDBoost/: CMakeLists.txt  Wrap.cpp  Wrap.h  python.h  python_streambuf.h
Code/RDBoost/Wrap/: CMakeLists.txt  RDBase.cpp
Code/RDGeneral/: CMakeLists.txt  utils.cpp  utils.h
Code/cmake/Modules/: RDKitUtils.cmake
conda/recipe/: build.sh  meta.yaml
